ООП_2 задание 2 v0.2 + многофайловые задание 1,2

--- a/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №1 Математические функции/Задача №1 Математические функции.vcxproj.filters
+++ b/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №1 Математические функции/Задача №1 Математические функции.vcxproj.filters
@@ -15,11 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp">
+    <ClCompile Include="Задача №1 Математические функции.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="Math.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Math.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
