--- a/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №3. Иерархия классов/Задача №3. Иерархия классов.vcxproj.filters
+++ b/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №3. Иерархия классов/Задача №3. Иерархия классов.vcxproj.filters
@@ -15,11 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp">
+    <ClCompile Include="Задача №3. Иерархия классов.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="hierar.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hierar.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
