--- a/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача 2. Класс/Задача 2. Класс.vcxproj
+++ b/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача 2. Класс/Задача 2. Класс.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d6a60d32-bf4d-4ca0-8980-bca242b85adb}</ProjectGuid>
-    <RootNamespace>задача2ФигурыСтороныиуглы</RootNamespace>
+    <ProjectGuid>{a259a95d-841e-490d-9796-fc814ee34a9b}</ProjectGuid>
+    <RootNamespace>Задача2Класс</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,8 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp" />
+    <ClCompile Include="my_Counter.cpp" />
+    <ClCompile Include="Задача 2. Класс.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="my_Counter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
