--- a/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача 2. Класс/Задача 2. Класс.vcxproj.filters
+++ b/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача 2. Класс/Задача 2. Класс.vcxproj.filters
@@ -15,11 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp">
+    <ClCompile Include="Задача 2. Класс.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
+    <ClCompile Include="my_Counter.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="my_Counter.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
