--- a/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №1 Математические функции/Задача №1 Математические функции.vcxproj
+++ b/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №1 Математические функции/Задача №1 Математические функции.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d6a60d32-bf4d-4ca0-8980-bca242b85adb}</ProjectGuid>
-    <RootNamespace>задача2ФигурыСтороныиуглы</RootNamespace>
+    <ProjectGuid>{6a9e52b1-e2d7-4ee7-a96e-df83e1221780}</ProjectGuid>
+    <RootNamespace>Задача1Математическиефункции</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,8 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp" />
+    <ClCompile Include="Math.cpp" />
+    <ClCompile Include="Задача №1 Математические функции.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Math.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
