--- a/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №3. Иерархия классов/Задача №3. Иерархия классов.vcxproj
+++ b/Базовое программирование на C++/6. Многофайловые проекты и библиотеки/Задача №3. Иерархия классов/Задача №3. Иерархия классов.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d6a60d32-bf4d-4ca0-8980-bca242b85adb}</ProjectGuid>
-    <RootNamespace>задача2ФигурыСтороныиуглы</RootNamespace>
+    <ProjectGuid>{72a889c9-9892-4e0e-a5a4-c3f7f8847f30}</ProjectGuid>
+    <RootNamespace>Задача3Иерархияклассов</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,8 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp" />
+    <ClCompile Include="hierar.cpp" />
+    <ClCompile Include="Задача №3. Иерархия классов.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hierar.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
