--- a/Базовое программирование на C++/5. ООП наследование и полиморфизм/Задача №3. Фигуры. Методы/Задача 3. Фигуры. Методы.vcxproj.filters
+++ b/Базовое программирование на C++/5. ООП наследование и полиморфизм/Задача №3. Фигуры. Методы/Задача 3. Фигуры. Методы.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задача №2 Фигуры. Стороны и углы.cpp">
+    <ClCompile Include="Задача 3. Фигуры. Методы.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
