--- a/Базовое программирование на C++/5. ООП наследование и полиморфизм/Задача №3. Фигуры. Методы/Задача 3. Фигуры. Методы.vcxproj
+++ b/Базовое программирование на C++/5. ООП наследование и полиморфизм/Задача №3. Фигуры. Методы/Задача 3. Фигуры. Методы.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Задача 3. Фигуры. Методы.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Текст.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
