--- a/Базовое программирование на C++/8. Исключения и обработка ошибок/задача №1 простое искл/задача №1 простое искл.vcxproj.filters
+++ b/Базовое программирование на C++/8. Исключения и обработка ошибок/задача №1 простое искл/задача №1 простое искл.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задача №1 простое исключение.cpp">
+    <ClCompile Include="задача №1 простое искл.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
