--- a/Базовое программирование на C++/10. CMake/work_2.2/CMakeLists.txt
+++ b/Базовое программирование на C++/10. CMake/work_2.2/CMakeLists.txt
@@ -2,5 +2,4 @@ cmake_minimum_required(VERSION 3.22.0)
 
 project(cmake_work40)
 
-
-add_executable(my_cmake_work_40 "Задача №3. Иерархия классов.cpp" Figure.h isos_Trigl.h parallelogram.h Quadr.h rectangle.h regtag_Trigl.h rhombus.h teral_Trigl.h Trigl.h Figure.cpp isos_Trigl.cpp parallelogram.cpp Quadr.cpp rectangle.cpp regtag_Trigl.cpp rhombus.cpp teral_Trigl.cpp Trigl.cpp)
+add_executable(my_cmake_work4 "work4.cpp" Figure.h isos_Trigl.h parallelogram.h Quadr.h rectangle.h regtag_Trigl.h rhombus.h teral_Trigl.h Trigl.h Figure.cpp isos_Trigl.cpp parallelogram.cpp Quadr.cpp rectangle.cpp regtag_Trigl.cpp rhombus.cpp teral_Trigl.cpp Trigl.cpp)
