11_правильно подкл. адресс библиотеки

--- a/Базовое программирование на C++/11. Сборка и подключение библиотек/work_1/work_1.vcxproj
+++ b/Базовое программирование на C++/11. Сборка и подключение библиотек/work_1/work_1.vcxproj
@@ -131,7 +131,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="work_1.cpp" />
+    <ClCompile Include="work_1.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\my_lib_work_1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\my_lib_work_1\my_lib_work_1.vcxproj">
