--- a/Базовое программирование на C++/11. Сборка и подключение библиотек/work_3/work_2.vcxproj
+++ b/Базовое программирование на C++/11. Сборка и подключение библиотек/work_3/work_2.vcxproj
@@ -131,7 +131,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="work_2.cpp" />
+    <ClCompile Include="work_2.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">..\my_lib_dinamic_work_2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\my_lib_dinamic_work_2\my_lib_dinamic_work_2.vcxproj">
