--- a/Базовое программирование на C++/11. Сборка и подключение библиотек/work_3/work_2.vcxproj
+++ b/Базовое программирование на C++/11. Сборка и подключение библиотек/work_3/work_2.vcxproj
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Евгений\Desktop\Netology\Базовое программирование на C++\11. Сборка и подключение библиотек\my_lib_dinamic_work_2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\my_lib_dinamic_work_2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
