--- a/4. Алгоритмы и структуры данных/3. Сортировки/Задача 2. Быстрая сортировка/Задача 2. Быстрая сортировка.vcxproj.filters
+++ b/4. Алгоритмы и структуры данных/3. Сортировки/Задача 2. Быстрая сортировка/Задача 2. Быстрая сортировка.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="задание 1 Сортировка слиянием.cpp">
+    <ClCompile Include="Задача 2. Быстрая сортировка.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
