--- a/4. Алгоритмы и структуры данных/4. Динамический массив Списки Деки/задача 2/задача 2.vcxproj.filters
+++ b/4. Алгоритмы и структуры данных/4. Динамический массив Списки Деки/задача 2/задача 2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Задача 2. Добавление в изменяемый динамический массив.cpp">
+    <ClCompile Include="задача 2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
